z-index fixed

--- a/src/scss/layout/_video.scss
+++ b/src/scss/layout/_video.scss
@@ -28,7 +28,7 @@
 }
 
 .contenido-video{
-    
+    z-index: 9;
     h2{
         color: v.$blanco;
         font-size: 4rem;
